# BlueSkyStrategyRepoClone

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  StrategyConfig.cmake.in  conanfile.py
.github/workflows/: actions.yml
ArraySim/: README.md
ArraySim/BypassDiodeSim/Run/: extract_results.m  main.m  process_results.m
ArraySim/BypassDiodeSim/Run/3W_3_Run/: ThreeWheel_3_String1_Diode.slx  ThreeWheel_3_String2_Diode.slx  ThreeWheel_3_String3_Diode.slx  totPower.m
ArraySim/BypassDiodeSim/Run/3W_4_Run/: ThreeWheel_4_String1_Diode.slx  ThreeWheel_4_String2_Diode.slx  ThreeWheel_4_String3_Diode.slx  totPower.m
ArraySim/BypassDiodeSim/Run/DV3A/: DV3A_String1_Diode.slx  DV3A_String2_Diode.slx  DV3A_String3_Diode.slx
ArraySim/BypassDiodeSim/Run/DV3B/: DV3A_String1_Diode.slx  DV3A_String3_Diode.slx  totPower.m
ArraySim/BypassDiodeSim/Run/DV3B_2/: DV3A_String1_Diode.slx  DV3A_String2_Diode.slx  DV3A_String3_Diode.slx
ArraySim/CPP/: CMakeLists.txt  README.md
ArraySim/CPP/data/shaders/: model.fs  model.vs  model_heat.vs
ArraySim/CPP/include/: Globals.h  Luts.h  Luts.hpp  Utilities.hpp  time.hpp
ArraySim/CPP/include/camera/: camera.hpp
ArraySim/CPP/include/gui/: gui.hpp
ArraySim/CPP/include/irradiance/: CellIrradianceSim.hpp  irradiance_csv.hpp  sun_plane.hpp
ArraySim/CPP/include/mesh/: Shader.hpp  mesh.hpp  model.hpp
ArraySim/CPP/include/model/: mesh.hpp  model.hpp
ArraySim/CPP/include/shader/: Shader.hpp
ArraySim/CPP/libs/glad/include/glad/: glad.h
ArraySim/CPP/libs/glad/src/: glad.c
ArraySim/CPP/src/: Luts.cpp  Utilities.cpp  main.cpp  time.cpp
ArraySim/CPP/src/camera/: camera.cpp
ArraySim/CPP/src/gui/: gui.cpp
ArraySim/CPP/src/irradiance/: CellIrradianceSim.cpp  irradiance_csv.cpp  sun_plane.cpp
ArraySim/CPP/src/mesh/: mesh.cpp  model.cpp
ArraySim/CPP/src/model/: mesh.cpp  model.cpp
ArraySim/CPP/src/shader/: Shader.cpp
ArraySim/GetCellIrradiance/: calculate_rays.m  cellData.m  cellMake.m  centerArrayAndCanopy.m  create_sun_plane.m  import_canopy_array_stl.m  main.m  plotArrayCanopy.m  project_onto_sun_plane.m  remShadCellStruc.m  remove_shaded_triangles.m  solarPower.m  visualize_irradiance.mlapp
ArraySim/GetCellIrradiance/archived_functions/: README.md
ArraySim/GetSunPosition/: dayAzElIrr.py  sim_august.csv  sim_october.csv  solcast_keys.json  sun_position.csv  sun_position_fsgp.csv  sun_position_july.csv  sun_position_october.csv
ArraySim/layouts/: DV3A.json  DV3B.json  DV3B_2.json  DV5.json  DV5_2.json  Long_Boi.json  Sperm_Mobile.json  Sperm_Mobile2.json  Thicc_Boi.json  aurora.json
RaceSim/: CMakeLists.txt  README.md
RaceSim/RaceSim/dump/: best_raceplan.json
RaceSim/data/config/: fsgp_config.yaml  fsgp_sim_test_config.yaml  sim_test_config.yaml  telem_config.yaml  test_config.yaml  wsc_config.yaml  wsc_config_route_tests.yaml
RaceSim/data/luts/ASC/loops/: loopThree.csv
RaceSim/data/luts/TestData/: uniform_segment_testing.csv
RaceSim/data/luts/fsgp/: fsgp_sparse.csv
RaceSim/data/luts/fsgp/dynamic/: dni.csv  shortwave_radiation.csv  time.csv  wind_direction_10m.csv  wind_speed_10m.csv
RaceSim/data/luts/fsgp/static/: fsgp_base_route.csv  fsgp_corners.csv  precomputed_distances.csv  telem.csv  test.py
RaceSim/data/luts/wsc_2023/static/: baseroute_fsgp.csv
RaceSim/exports/: best_raceplan.json
RaceSim/include/: Defines.hpp
RaceSim/include/config/: Config.hpp  ConfigParam.hpp  config.h
RaceSim/include/model/: Car.hpp  CarFactory.hpp  V1Car.hpp  V2Car.hpp  car_factory.h
RaceSim/include/opt/: GeneticUtilities.hpp  Optimizer.hpp  OptimizerFactory.hpp  PopulationGenerator.hpp  V1Optimizer.hpp  V2Optimizer.hpp  base_opt.h  opt_factory.h
RaceSim/include/route/: Route.hpp
RaceSim/include/sim/: ASCSimulator.hpp  FSGPSimulator.hpp  Simulator.hpp  SimulatorFactory.hpp  TelemetrySimulator.hpp  WSCSimulator.hpp  sim.h
RaceSim/include/utils/: CustomException.hpp  CustomTime.hpp  Defines.hpp  Geography.hpp  Logger.hpp  Luts.hpp  ThreadManager.hpp  Units.hpp  Utilities.hpp  units.h
RaceSim/libs/nlohmann/: CMakeLists.txt
RaceSim/libs/yaml-cpp/: CMakeLists.txt
RaceSim/scripts/: calculate_corner_speeds.py  create_route.py  gui.py  irr_forecast  irr_forecast.py  irr_forecast2.py  requirements.txt
RaceSim/src/: main.cpp
RaceSim/src/config/: Config.cpp  config.cpp
RaceSim/src/model/: Car.cpp  CarFactory.cpp  V1Car.cpp  V2Car.cpp  car_factory.cpp
RaceSim/src/optimizer/: GeneticUtilities.cpp  Mutation.cpp  Optimizer.cpp  OptimizerFactory.cpp  PopulationGenerator.cpp  V1Optimizer.cpp  V2Optimizer.cpp  opt_factory.cpp  v1_opt.cpp
RaceSim/src/route/: Route.cpp  SegmentRoute.cpp  route.cpp
RaceSim/src/simulation/: ASCSimulator.cpp  FSGPSimulator.cpp  Simulator.cpp  SimulatorFactory.cpp  TelemetrySimulator.cpp  WSCSimulator.cpp
RaceSim/src/utils/: CustomTime.cpp  Logger.cpp  Luts.cpp  geography.cpp  utilities.cpp
RaceSim/tests/: GeographyTest.cpp  LutsTest.cpp  OptimizerTest.cpp  RouteTest.cpp  SimTest.cpp  TimeTest.cpp  v1CarTest.cpp  v2CarTest.cpp
Telemetry/: README.md
Telemetry/receiver/: serialprom.py
data/config/: fsgp_config.yaml  wsc_config.yaml
data/luts/ASC/: baseRoute.csv
include/config/: Config.hpp  ConfigParam.hpp  ConfigParser.hpp
include/model/: Car.hpp
include/opt/: FSGPOptimizer.hpp  Optimizer.hpp  PopulationGenerator.hpp  WSCGeneticOpt.hpp  WSCOptimizer.hpp
include/route/: RacePlan.hpp  RacePlan.tpp  Route.hpp
include/sim/: ASCSimulator.hpp  FSGPSimulator.hpp  Simulator.hpp  TelemetrySimulator.hpp  WSCSimulator.hpp
scripts/: gui.py  interpolate_route.py  irr_forecast2.py
src/: ASC.cpp  FSGP.cpp  WSC.cpp  main.cpp
src/config/: Config.cpp  ConfigParser.cpp
src/model/: Car.cpp
src/optimizer/: FSGPOptimizer.cpp  Mutation.cpp  PopulationGenerator.cpp  V2Optimizer.cpp  WSCGeneticOpt.cpp  WSCOptimizer.cpp
src/route/: RacePlan.cpp  Route.cpp
src/simulation/: ASCSimulator.cpp  FSGPSimulator.cpp  TelemetrySimulator.cpp  WSCSimulator.cpp
tests/: GeographyTest.cpp  LutsTest.cpp  OptimizerTest.cpp  RouteTest.cpp  SimTest.cpp  TimeTest.cpp  v1CarTest.cpp  v2CarTest.cpp
(+33 files in other folders)
